<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超声测宽</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_ui_set">UI_Set</string>
    <string name="title_activity_ui__file_selete">Ui_FileSelete</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ui__analysis">Ui_Analysis</string>
    <string name="title_activity_ui__browse_data">Ui_BrowseData</string>


    <string name="str_blackWrite">黑白图</string>
    <string name="str_before">上一张</string>
    <string name="str_next">下一张</string>
    <string name="str_handModle">手动</string>
    <string name="str_autoModle">自动</string>
    <string name="str_pic">原  图</string>
    <string name="str_findBian">自动判别</string>
    <string name="str_enlarge">放  大</string>
    <string name="str_lessen">缩  小</string>
    <string name="str_morePic">缩略图</string>
    <string name="str_siglePic">单幅图</string>
    <string name="str_calibration">标定(2mm)</string>
    <string name="str_acTitle">海创高科裂缝测宽仪</string>
    
    <string name="str_measureWide">测量缝宽</string>
    <string name="str_flieManger">文件管理</string>
    <string name="str_onTimeMeasure">定时监测</string>
    <string name="str_instrument">仪器标定</string>
    <string name="str_setting">系统设置</string>
    <string name="str_about">关于仪器</string>
    
    <string name="str_makeSure">确定</string>
    <string name="str_prompt">提示信息</string>
    <string name="str_noAc_msg">暂未开放，敬请期待</string>

    <string name="str_back">返回</string>
    <string name="str_ok">确定</string>

    <string name="str_startCollect">   开始测量\n●停止测量</string>
    <string name="str_stopCollect">●开始测量\n   停止测量</string>

    <string name="str_takePhoto">预拍</string>
    <string name="str_save">存储</string>
    <string name="str_saveSuccess">保存成功</string>

    <string name="str_proName">工程名称：</string>
    <string name="str_gjName">构件名称：</string>
    <string name="str_fileName">文件名称：</string>
    <string name="str_adjueStyle">判别方式：</string>
    <string name="str_checkStyle">检测方式：</string>
    <string name="str_Auto">●自动计算\n  手动计算</string>
    <string name="str_Hand">  自动计算\n●手动计算</string>

    <string name="str_leftCursor">●左侧游标\n  右侧游标</string>
    <string name="str_rightCursor">  左侧游标\n●右侧游标</string>

    <string name="str_toLeft">左移</string>
    <string name="str_toRight">右移</string>

    <string name="str_ProNewName">选择或新建工程</string>
    <string name="str_GjNewName">选择或新建构件</string>
    <string name="str_FileNewName">新建文件</string>

    <string name="str_selectAll">全选</string>
    <string name="str_cancelAll">取消全选</string>
    <string name="str_noChice">没有选中项</string>

    <string name="str_delMsg">确定要删除选中\n的工程或者构件吗？</string>
    <string name="str_noU_pan">未检测到U盘</string>
    <string name="str_pleaseOnHand">请手动拷贝文件。</string>
    <string name="str_ToUError">转U盘失败</string>
    <string name="str_pleaseUseU">请插入U盘</string>
    <string name="str_System_Low">该安卓版本无法\n拷贝文件，请手动复制</string>
    <string name="str_NoneUPan">未检测到U盘，如您已经\n插入U盘，请拔掉后重新插入。</string>


    <string name="str_companyName">公司名称</string>
    <string name="str_companyNameCon">北京海创高科科技有限公司</string>
    <string name="str_compantNet">公司网址</string>
    <string name="str_compantNetCon">http://www.bjhcgk.com</string>
    <string name="str_phone">联系电话</string>
    <string name="str_phoneNum">400-010-5818</string>
    <string name="str_divice">仪器编号</string>
    <string name="str_diviceNum">85117110001</string>

    <string name="str_hardVision">硬件版本</string>
    <string name="str_SysVision">系统版本</string>
    <string name="str_lastVision">软件版本</string>
    <string name="str_freeSpace">剩余空间</string>

    <string name="str_calibrationMsg">标定方法：\n例如：使显微摄像头处于拍照状态，将摄像头对准尺的2毫米标线处，待图像稳定清晰后，选中拍照按钮，点击【确定】键进行拍照，自动进行标定，此时图像左上方出现2.mm，表示标定完毕；</string>

    <string name="str_ontimeCollect_start">开始监测</string>
    <string name="str_ontimeCpllect_stop">停止监测</string>

    <string name="str_del">删除</string>
    <string name="str_ToUPan">转U盘</string>



    <string-array name="adjueSytle">
        <item>中间水平判别</item>
        <item>全自动判别</item>
    </string-array>
    <string-array name="checkSytle">
        <item>手动</item>
        <item>自动</item>
    </string-array>

</resources>