<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_companyName"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/str_companyNameCon"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_compantNet"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/str_compantNetCon"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_phone"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/str_phoneNum"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_divice"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/str_diviceNum"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_hardVision"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:id="@+id/about_hardVision_tv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="V 1.2.0"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_SysVision"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:id="@+id/about_sysVision_tv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="V 1.5.1"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_50dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_lastVision"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:id="@+id/about_softVision_tv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="V 1.5.1"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/xhdpi_60dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/str_freeSpace"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />

        <TextView
            android:id="@+id/about_freeSpace_tv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="30%"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_25sp" />
    </LinearLayout>
</LinearLayout>