<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xhdpi_10dp"
            android:text="@string/str_proName"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_27sp" />

        <EditText
            android:id="@+id/collect_proName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:layout_margin="@dimen/xhdpi_10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xhdpi_10dp"
            android:text="@string/str_fileName"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/xhdpi_27sp" />

        <EditText
            android:id="@+id/collect_fileName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:layout_margin="@dimen/xhdpi_10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/collect_blackWrite_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_blackWrite"
            android:textColor="?attr/textColor" />

        <Button
            android:id="@+id/collect_enlarge_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_enlarge" />

        <Button
            android:id="@+id/collect_Lessen_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lessen" />
    </LinearLayout>

</LinearLayout>