<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editPic_boot_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/ac_basetitle"
        android:visibility="gone"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.ck.ui.OpenCvCameraView
            android:id="@+id/editPic_cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/background"
            android:clickable="true" />

        <LinearLayout
            android:id="@+id/editPic_drag_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/editPic_blackWrite_bt"
                android:layout_width="@dimen/x80"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn"
                android:focusable="false"
                android:text="@string/str_blackWrite"
                android:textColor="@color/black"
                android:textSize="@dimen/x14" />

            <Button
                android:id="@+id/editPic_before_bt"
                android:layout_width="@dimen/x80"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn"
                android:focusable="false"
                android:text="@string/str_before"
                android:textColor="@color/black"
                android:textSize="@dimen/x14" />

            <Button
                android:id="@+id/editPic_next_bt"
                android:layout_width="@dimen/x80"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn"
                android:focusable="false"
                android:text="@string/str_next"
                android:textColor="@color/black"
                android:textSize="@dimen/x14" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>